# tn_crash_atlas

./: intro.md  main.py  myst.yml  pyproject.toml
.github/workflows/: deploy.yml
book/: myst.yml  ped_crashes.ipynb
