[project]
name = "where-crash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "jupyter-book>=2.1.5",
    "jupyterlab>=4.5.7",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
]
